--- a/mentor_form/styles.css
+++ b/mentor_form/styles.css
@@ -10,11 +10,18 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
+
+h3{
+    color:#bcd6f2;
+   
+}
+
 
 .container{
     width: 90%;
-    height: 90%;
+    height: 100%;
     padding: 20px;
     border-radius: 20px;
     box-shadow:  0px 5px 25px rgba(0,0,0,0.2);
@@ -25,7 +32,7 @@ body{
 }
 
 .container form{
-    width: 100%;
+    width: 60%;
     height: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -40,7 +47,7 @@ body{
     overflow: hidden;
 }
 
-.inputBox input[type="text"], .inputBox input[type="email"]{
+.inputBox input[type="text"], .inputBox input[type="email"], .inputBox input[type="tel"]{
     width: 100%;
     height: 50px;
     border-radius: 5px;
@@ -53,7 +60,7 @@ body{
     color: #444;
 }
 
-.inputBox textarea{
+.inputBox textarea {
     width: 100%;
     height: 120px;
     border-radius: 5px;
